  * Fix fsautocomplete (lsp-fsharp) startup on emacs@master (and emacs@emacs-28 on macOS) due to
    a switch ~posix_spawn~ and not setting proper sigmask on child processes.
  * Add TypeProf support.
  * Add Ansible support.
  * Disable ~lsp-steep-use-bundler~ by default.
  * Add [[https://github.com/idris-community/idris2-lsp][idris2-lsp]]
  * Add [[https://github.com/aca/emmet-ls][emmet-ls]]
  * Support all ~initializationOptions~ in ~typescript-language-server~
  * Update rust-analyzer's inlay hint protocol support.
  * Add support for ~typescript-language-server~’s inlay hints.
  * Add support for ~workspace/willRenameFiles~ and ~workspace/didRenameFiles~.
  * Improve project root import to read specific keys instead of any events.
  * Support ~labelDetails~ of LSP Specification 3.17
  * Add Gleam support
  * Drop deprecated rust-analyzer variable lsp-rust-analyzer-import-merge-behaviour
  * Added run and debug code lenses to ~lsp-kotlin~
  * Add setting UPDATE_EXPECT=1 when running `expect!` tests ~lsp-rust~
  * Add ~lsp-use-workspace-root-for-server-default-directory~.
  * Add [[https://github.com/artempyanykh/marksman][marksman]] support.
  * ~lsp-find-references~ to include declaration by default (configurable with ~lsp-references-exclude-definition~)
  * Add [[https://github.com/ruby-syntax-tree/syntax_tree][syntax_tree]] support for Ruby code.
  * ~lsp-organize-imports~ no longer prompts for an action, even if ~lsp-auto-execute-action~ is nil.
  * Add [[https://github.com/mint-lang/mint][mint-lang]] support.
  * Add ~lsp-sorbet-as-add-on~ variable to allow running the Sorbet server as an add-on alongside Solargraph or others
  * Add [[https://github.com/nikeee/dot-language-server][dot-language-server]] (/a.k.a./ Graphviz) support.
  * Add [[https://github.com/FractalBoy/perl-language-server][PLS]] support (additional sever for Perl).
  * Fix ~lsp-avy-lens~ when ~avy-style~ is ~'de-bruijn~ or ~'words~ #3554